fix(babylonlabs-io-btc-staking-ts): resolve build issue caused by dependency conflicts
ISSUE:
- Babylonlabs package (@bitgo/babylonlabs-io-btc-staking-ts) was failing to build
- Root cause: Lerna 8 upgrade introduced newer minimatch versions (9.x-10.x) that
  conflicted with older @types/glob@7.2.0 interface expectations
- Error: Type 'IOptions' is not assignable to type 'IOptions' in dts-bundle-generator

SOLUTION:
- Add @types/glob@^8.1.0 locally to babylonlabs package (compatible with newer minimatch versions)
- Keep dts-bundle-generator at original version ^9.3.1 (no version bump needed)
- Use local dependency approach to keep fix targeted to affected package only

TECHNICAL DETAILS:
- Lerna 8 brings in minimatch@9.x-10.x via NX integration
- @types/glob@7.2.0 expected minimatch@7.x-8.x interface
- @types/glob@8.1.0 is compatible with minimatch@9.x-10.x
- Local dependency prevents affecting other packages in the monorepo

VERIFICATION:
- Babylonlabs package builds successfully from clean cache
- Other packages remain unaffected
- dts-bundle-generator works correctly with updated type definitions

TICKET: WP-6096

--- a/modules/babylonlabs-io-btc-staking-ts/package.json
+++ b/modules/babylonlabs-io-btc-staking-ts/package.json
@@ -32,6 +32,7 @@
   "author": "Babylon Labs Ltd.",
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
+    "@types/glob": "^8.1.0",
     "dts-bundle-generator": "^9.3.1",
     "esbuild": "^0.20.2",
     "nanoevents": "^9.1.0"
