refactor(root): extract nx cache key pattern to workflow environment variable
- Add NX_CACHE_FILES environment variable to reduce duplication
- Update all three cache key patterns to use env.NX_CACHE_FILES
- Improves maintainability and reduces copy-paste errors
- Addresses Copilot feedback on cache key pattern duplication

TICKET: WP-6096

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ permissions:
 
 env:
   NX_NO_CLOUD: true
+  NX_CACHE_FILES: "modules/*/src/**/*.ts,modules/*/src/**/*.js,modules/*/*.json"
 
 jobs:
   unit-test:
@@ -74,7 +75,7 @@ jobs:
           path: |
             .nx/cache
             modules/*/dist
-          key: ${{ runner.os }}-nx-${{ matrix.node-version }}-${{ hashFiles('yarn.lock') }}-${{ hashFiles('modules/*/src/**/*.ts', 'modules/*/src/**/*.js', 'modules/*/*.json') }}
+          key: ${{ runner.os }}-nx-${{ matrix.node-version }}-${{ hashFiles('yarn.lock') }}-${{ hashFiles(env.NX_CACHE_FILES) }}
           restore-keys: |
             ${{ runner.os }}-nx-${{ matrix.node-version }}-${{ hashFiles('yarn.lock') }}-
             ${{ runner.os }}-nx-${{ matrix.node-version }}-
@@ -184,7 +185,7 @@ jobs:
           path: |
             .nx/cache
             modules/*/dist
-          key: ${{ runner.os }}-nx-license-${{ hashFiles('yarn.lock') }}-${{ hashFiles('modules/*/src/**/*.ts', 'modules/*/src/**/*.js', 'modules/*/*.json') }}
+          key: ${{ runner.os }}-nx-license-${{ hashFiles('yarn.lock') }}-${{ hashFiles(env.NX_CACHE_FILES) }}
           restore-keys: |
             ${{ runner.os }}-nx-license-${{ hashFiles('yarn.lock') }}-
             ${{ runner.os }}-nx-license-
@@ -291,7 +292,7 @@ jobs:
           path: |
             .nx/cache
             modules/*/dist
-          key: ${{ runner.os }}-nx-browser-${{ hashFiles('yarn.lock') }}-${{ hashFiles('modules/*/src/**/*.ts', 'modules/*/src/**/*.js', 'modules/*/*.json') }}
+          key: ${{ runner.os }}-nx-browser-${{ hashFiles('yarn.lock') }}-${{ hashFiles(env.NX_CACHE_FILES) }}
           restore-keys: |
             ${{ runner.os }}-nx-browser-${{ hashFiles('yarn.lock') }}-
             ${{ runner.os }}-nx-browser-
