--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "typescript-cached-transpile": "^0.0.6",
     "url": "^0.11.0",
     "webpack": "5.98.0",
-    "webpack-cli": "^4.9.1",
+    "webpack-cli": "^5.0.0",
     "yargs": "^17.7.2",
     "yeoman-generator": "^5.6.1"
   },
@@ -100,7 +100,8 @@
     "serialize-javascript": "^6.0.2",
     "@grpc/grpc-js": "^1.12.6",
     "request": "npm:@cypress/request@3.0.9",
-    "**/avalanche/store2": "2.14.4"
+    "**/avalanche/store2": "2.14.4",
+    "webpack-dev-server": "5.2.1"
   },
   "workspaces": [
     "modules/*"
