docs: added comment explaining bigint-buffer-guard.ts
Ticket: DX-1549

--- a/package.json
+++ b/package.json
@@ -99,7 +99,9 @@
     "**/swarm-js/**/ws": "5.2.4",
     "serialize-javascript": "^6.0.2",
     "@grpc/grpc-js": "^1.12.6",
-    "bigint-buffer": "npm:@trufflesuite/bigint-buffer@1.1.10"
+    "bigint-buffer": "npm:@trufflesuite/bigint-buffer@1.1.10",
+    "request": "npm:@cypress/request@3.0.9",
+    "**/avalanche/store2": "2.14.4"
   },
   "workspaces": [
     "modules/*"
