feat(sdk-coin-canton): added new coin, canton skeleton Ticket: COIN-5805

--- a/modules/bitgo/tsconfig.json
+++ b/modules/bitgo/tsconfig.json
@@ -114,6 +114,9 @@
       "path": "../sdk-coin-btg"
     },
     {
+      "path": "../sdk-coin-canton"
+    },
+    {
       "path": "../sdk-coin-celo"
     },
     {
