--- a/modules/bitgo/package.json
+++ b/modules/bitgo/package.json
@@ -67,6 +67,7 @@
     "@bitgo/sdk-coin-bsv": "^2.4.2",
     "@bitgo/sdk-coin-btc": "^2.9.1",
     "@bitgo/sdk-coin-btg": "^2.4.2",
+    "@bitgo/sdk-coin-canton": "^1.0.0",
     "@bitgo/sdk-coin-celo": "^5.3.2",
     "@bitgo/sdk-coin-coredao": "^2.6.2",
     "@bitgo/sdk-coin-coreum": "^21.5.2",
