--- a/modules/sdk-coin-canton/package.json
+++ b/modules/sdk-coin-canton/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@bitgo/sdk-core": "^36.10.1",
     "@bitgo/statics": "^58.2.0",
+    "@canton-network/wallet-sdk": "^0.9.0",
     "bignumber.js": "^9.1.1"
   },
   "devDependencies": {
