--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,12 @@
 {
   "version": "independent",
   "npmClient": "yarn",
+  "useWorkspaces": true,
   "command": {
     "version": {
       "message": "chore(root): publish modules"
     }
   },
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "useNx": true
+  "useNx": false
 }
