Revert "Revert "feat: upgrade lerna and enable local cache""

--- a/lerna.json
+++ b/lerna.json
@@ -1,12 +1,11 @@
 {
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true,
   "command": {
     "version": {
       "message": "chore(root): publish modules"
     }
   },
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "useNx": false
+  "useNx": true
 }
