fix: add explicit 'files' in package json
Related to lerna v7

TICKET: WP-6096

--- a/modules/abstract-lightning/package.json
+++ b/modules/abstract-lightning/package.json
@@ -50,5 +50,8 @@
     "io-ts-types": "^0.5.16",
     "macaroon": "^3.0.4"
   },
-  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
+  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c",
+  "files": [
+    "dist"
+  ]
 }
