--- a/modules/key-card/package.json
+++ b/modules/key-card/package.json
@@ -42,5 +42,8 @@
   "devDependencies": {
     "@types/qrcode": "1.5.0"
   },
-  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
+  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c",
+  "files": [
+    "dist"
+  ]
 }
