--- a/modules/sdk-coin-polyx/package.json
+++ b/modules/sdk-coin-polyx/package.json
@@ -54,5 +54,8 @@
   "devDependencies": {
     "@bitgo/sdk-api": "^1.69.2",
     "@bitgo/sdk-test": "^9.1.2"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
