--- a/modules/sdk-rpc-wrapper/package.json
+++ b/modules/sdk-rpc-wrapper/package.json
@@ -44,5 +44,8 @@
       ".ts"
     ]
   },
-  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
+  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c",
+  "files": [
+    "dist"
+  ]
 }
