--- a/modules/abstract-eth/package.json
+++ b/modules/abstract-eth/package.json
@@ -64,5 +64,8 @@
     "@bitgo/sdk-test": "^9.1.2",
     "@types/keccak": "^3.0.5"
   },
-  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
+  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c",
+  "files": [
+    "dist"
+  ]
 }
