--- a/modules/abstract-substrate/package.json
+++ b/modules/abstract-substrate/package.json
@@ -56,5 +56,8 @@
     "lodash": "^4.17.15",
     "tweetnacl": "^1.0.3"
   },
-  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
+  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c",
+  "files": [
+    "dist"
+  ]
 }
