--- a/modules/sdk-api/package.json
+++ b/modules/sdk-api/package.json
@@ -62,5 +62,8 @@
   "resolutions": {
     "degenerator": "5.0.0"
   },
-  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
+  "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c",
+  "files": [
+    "dist"
+  ]
 }
