--- a/modules/sdk-coin-iota/package.json
+++ b/modules/sdk-coin-iota/package.json
@@ -49,5 +49,8 @@
     "@bitgo/sdk-api": "^1.69.2",
     "@bitgo/sdk-lib-mpc": "^10.7.0",
     "@bitgo/sdk-test": "^9.1.2"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
