--- a/modules/sdk-core/package.json
+++ b/modules/sdk-core/package.json
@@ -4,6 +4,9 @@
   "description": "core library functions for BitGoJS",
   "main": "./dist/src/index.js",
   "types": "./dist/src/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "yarn unit-test",
     "unit-test": "nyc -- mocha --recursive test",
