--- a/modules/statics/package.json
+++ b/modules/statics/package.json
@@ -4,6 +4,9 @@
   "description": "dependency-free static configuration for the bitgo platform",
   "main": "./dist/src/index.js",
   "types": "./dist/src/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "yarn unit-test",
     "unit-test": "nyc -- mocha",
