--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
     "bigint-buffer": "npm:@trufflesuite/bigint-buffer@1.1.10",
     "request": "npm:@cypress/request@3.0.9",
     "**/avalanche/store2": "2.14.4",
-    "webpack-dev-server": "5.2.1"
+    "webpack-dev-server": "5.2.1",
+    "memfs": "4.46.0"
   },
   "workspaces": [
     "modules/*"
