refactor: add missing codec defintions
ticket: WP-6196

--- a/modules/express/package.json
+++ b/modules/express/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "Local signing server and proxy for the BitGo platform",
   "main": "./dist/src/index.js",
+  "source": "src/typedRoutes/api/index.ts",
   "types": "./dist/src/index.d.ts",
   "bin": {
     "bitgo-express": "./bin/bitgo-express"
