--- a/modules/abstract-lightning/package.json
+++ b/modules/abstract-lightning/package.json
@@ -9,7 +9,7 @@
     "test": "yarn unit-test",
     "unit-test": "nyc -- mocha --recursive test",
     "fmt": "prettier --write .",
-    "check-fmt": "prettier --check .",
+    "check-fmt": "prettier --check '**/*.{ts,js,json}'",
     "clean": "rm -r ./dist",
     "lint": "eslint --quiet .",
     "prepare": "npm run build"
