--- a/modules/bitgo/package.json
+++ b/modules/bitgo/package.json
@@ -37,7 +37,7 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm run compile",
     "upload-artifacts": "node scripts/upload-test-reports.js",
-    "check-fmt": "prettier --check '{src,test}/**/*.{ts,js,json}'",
+    "check-fmt": "prettier --check '**/*.{ts,js,json}'",
     "unprettied": "grep -R -L --include '*.ts' --include '*.js' --include '*.json' '@prettier' src test",
     "fmt": "prettier --write '{src,test}/**/*.{ts,js,json}'",
     "upload-docs": "node scripts/upload-docs.js",
