fix: upgrade taquito sdk version
TICKET: WIN-7396

--- a/modules/sdk-coin-xtz/package.json
+++ b/modules/sdk-coin-xtz/package.json
@@ -45,8 +45,9 @@
     "@bitgo/secp256k1": "^1.7.0",
     "@bitgo/statics": "^58.8.0",
     "@noble/curves": "1.8.1",
-    "@taquito/local-forging": "6.3.5-beta.0",
-    "@taquito/signer": "6.3.5-beta.0",
+    "@taquito/local-forging": "^23.0.2",
+    "@taquito/rpc": "^23.0.2",
+    "@taquito/signer": "^23.0.2",
     "bignumber.js": "^9.0.0",
     "bs58check": "^2.1.2",
     "libsodium-wrappers": "^0.7.6",
