feat(wasm-utxo): replace wasm-miniscript with wasm-utxo package
Replace @bitgo/wasm-miniscript dependency with @bitgo/wasm-utxo in multiple
modules:
- abstract-utxo
- utxo-bin
- utxo-core
- utxo-staking

Issue: BTC-2652

Co-authored-by: llm-git <llm-git@ttll.de>

--- a/modules/abstract-utxo/package.json
+++ b/modules/abstract-utxo/package.json
@@ -51,7 +51,7 @@
     "@bitgo/utxo-core": "^1.21.2",
     "@bitgo/utxo-lib": "^11.13.1",
     "@bitgo/utxo-ord": "^1.22.8",
-    "@bitgo/wasm-miniscript": "2.0.0-beta.7",
+    "@bitgo/wasm-utxo": "file:../../bitgo-wasm-utxo-0.0.0-semantic-release-managed.tgz",
     "@types/lodash": "^4.14.121",
     "@types/superagent": "4.1.15",
     "bignumber.js": "^9.0.2",
