fix: install @api-ts/openapi-generator
This commit installs @api-ts/openapi-generator as a dev dependency. This
used to be manually installed in CI, but got lost when moving the
generation step into a new workflow

TICKET: DX-2708

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "license": "Apache-2.0",
   "devDependencies": {
+    "@api-ts/openapi-generator": "5.14.0",
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@clack/prompts": "^0.7.0",
