feat(statics): onboard tokens on morph chain
TICKET: WIN-7900

--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "**/ethers/**/ws": "7.5.10",
     "**/swarm-js/**/ws": "5.2.4",
     "**/swarm-js/**/tar": "6.2.1",
+    "**/lerna/**/tar": "7.5.3",
+    "**/yeoman-generator/**/tar": "7.5.3",
     "serialize-javascript": "^6.0.2",
     "@grpc/grpc-js": "^1.12.6",
     "bigint-buffer": "npm:@trufflesuite/bigint-buffer@1.1.10",
