feat(sdk-coin-tempo): integrate Tempo SDK and update references
Ticket: WIN-8719

--- a/modules/account-lib/tsconfig.json
+++ b/modules/account-lib/tsconfig.json
@@ -122,6 +122,9 @@
       "path": "../sdk-coin-tia"
     },
     {
+      "path": "../sdk-coin-tempo"
+    },
+    {
       "path": "../sdk-coin-trx"
     },
     {
